small changes in index file

--- a/www/index.html
+++ b/www/index.html
@@ -12,13 +12,15 @@
 <body>
     <nav class="nav_main">
         <div class="container">
+            <div class="logo_phone">
+                <a href="#" class="logo">SandSmile</a>
+                <a href="#" class="phone">+7 812 888-88-88</a>
+            </div>
             <ul class="nav">
-                <a href="#" class="name_company">SandSmile</a>
                 <li><a href="#">Мастер-классы</a></li>
                 <li><a href="#">Локации</a></li>
                 <li><a href="#">Контакты</a></li>
                 <li><a href="#">Сувениры</a></li>
-                <a href="#" class="connect_company">+7 812 888-88-88</a>
             </ul>
         </div>
     </nav>
