--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,8 @@
     <section class="promo">
         <div class="container">
             <h1>SandSmile</h1>
-            <p class="promo_p">Учим строить  песочные замки, проводим мастер-классы
-                для взрослых и детей в Санкт-Петербурге и ленинградской области</p>
+            <p class="promo_p">Учим строить песочные замки, проводим мастер-классы
+                для взрослых и детей в Санкт-Петербурге и Ленинградской области</p>
         </div>
     </section>
 
@@ -69,6 +69,45 @@
                     <a href="#" class="services_button">Заказать</a>
                 </li>
             </ul>
+            <!-- <div class="services_row">
+                <div class="services_list">
+                    <div class="services_item">
+                        <img src="../img/services/sub_child.png" alt="подписка для ребенка" class="services_img">
+                        <h3>Детский</h3>
+                        <ul>
+                            <li class="p1">Внедрение современных методик позволяет оценить.</li>
+                            <li class="p2">от 8 лет 2 часа до 6 человек</li>
+                        </ul>
+                        <p class="services_cost">10 000 ₽</p>
+                        <a href="#" class="services_button">Заказать</a>
+                    </div>
+                </div>
+                <div class="services_list">
+                    <div class="services_item">
+                        <img src="img/services/sub_family.png" alt="подписка для семьи" class="services_img">
+                        <h3>Семейный</h3>
+                        <ul>
+                            <li class="p1">В целом, конечно, внедрение современных методик обеспечивает широкому кругу
+                                (специалистов) участие в формировании экспериментов.</li>
+                            <li class="p2">3 часа до 6 человек 20 фото 10х15</li>
+                        </ul>
+                        <p class="services_cost">20 000 ₽</p>
+                        <a href="#" class="services_button">Заказать</a>
+                    </div>
+                </div>
+                <div class="services_list">
+                    <div class="services_item">
+                        <img src="img/services/sub_company.png" alt="подписка для семьи" class="services_img">
+                        <h3>На компанию</h3>
+                        <ul>
+                            <li class="p1">Вы не только запомните потрясающий мастер класс, но и отличн отдохнете!</li>
+                            <li class="p2">от 18 лет с 19-00 и до утра ∞ человек ∞ коктейли DJ</li>
+                        </ul>
+                        <p class="services_cost">5000 ₽/чел</p>
+                        <a href="#" class="services_button">Заказать</a>
+                    </div>
+                </div>
+            </div> -->
         </div>
     </section>
 
