work on index and style

--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,14 @@
         <div class="container">
             <div class="logo_phone">
                 <a href="#" class="logo">SandSmile</a>
+                <ul class="nav">
+                    <li><a href="#">Мастер-классы</a></li>
+                    <li><a href="#">Локации</a></li>
+                    <li><a href="#">Контакты</a></li>
+                    <li><a href="#">Сувениры</a></li>
+                </ul>
                 <a href="#" class="phone">+7 812 888-88-88</a>
             </div>
-            <ul class="nav">
-                <li><a href="#">Мастер-классы</a></li>
-                <li><a href="#">Локации</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">Сувениры</a></li>
-            </ul>
         </div>
     </nav>
 
@@ -38,35 +38,41 @@
             <h2>Мастер-классы</h2>
             <ul class="services_list">
                 <li class="services_item">
-                    <img src="../img/services/sub_child.png" alt="подписка для ребенка" class="services_img">
-                    <h3>Детский</h3>
-                    <ul>
-                        <li class="p1">Внедрение современных методик позволяет оценить.</li>
-                        <li class="p2">от 8 лет 2 часа до 6 человек</li>
-                    </ul>
-                    <p class="services_cost">10 000 ₽</p>
-                    <a href="#" class="services_button">Заказать</a>
+                    <div class="services_card">
+                        <img src="../img/services/sub_child.png" alt="подписка для ребенка" class="services_img">
+                        <h3>Детский</h3>
+                        <ul>
+                            <li class="p1">Внедрение современных методик позволяет оценить.</li>
+                            <li class="p2">от 8 лет 2 часа до 6 человек</li>
+                        </ul>
+                        <p class="services_cost">10 000 ₽</p>
+                        <a href="#" class="services_button">Заказать</a>
+                    </div>
                 </li>
                 <li class="services_item">
-                    <img src="img/services/sub_family.png" alt="подписка для семьи" class="services_img">
-                    <h3>Семейный</h3>
-                    <ul>
-                        <li class="p1">В целом, конечно, внедрение современных методик обеспечивает широкому кругу
-                            (специалистов) участие в формировании экспериментов.</li>
-                        <li class="p2">3 часа до 6 человек 20 фото 10х15</li>
-                    </ul>
-                    <p class="services_cost">20 000 ₽</p>
-                    <a href="#" class="services_button">Заказать</a>
+                    <div class="services_card">
+                        <img src="img/services/sub_family.png" alt="подписка для семьи" class="services_img">
+                        <h3>Семейный</h3>
+                        <ul>
+                            <li class="p1">В целом, конечно, внедрение современных методик обеспечивает широкому кругу
+                                (специалистов) участие в формировании экспериментов.</li>
+                            <li class="p2">3 часа до 6 человек 20 фото 10х15</li>
+                        </ul>
+                        <p class="services_cost">20 000 ₽</p>
+                        <a href="#" class="services_button">Заказать</a>
+                    </div>
                 </li>
                 <li class="services_item">
-                    <img src="img/services/sub_company.png" alt="подписка для семьи" class="services_img">
-                    <h3>На компанию</h3>
-                    <ul>
-                        <li class="p1">Вы не только запомните потрясающий мастер класс, но и отличн отдохнете!</li>
-                        <li class="p2">от 18 лет с 19-00 и до утра ∞ человек ∞ коктейли DJ</li>
-                    </ul>
-                    <p class="services_cost">5000 ₽/чел</p>
-                    <a href="#" class="services_button">Заказать</a>
+                    <div class="services_card">
+                        <img src="img/services/sub_company.png" alt="подписка для семьи" class="services_img">
+                        <h3>На компанию</h3>
+                        <ul>
+                            <li class="p1">Вы не только запомните потрясающий мастер класс, но и отличн отдохнете!</li>
+                            <li class="p2">от 18 лет с 19-00 и до утра ∞ человек ∞ коктейли DJ</li>
+                        </ul>
+                        <p class="services_cost">5000 ₽/чел</p>
+                        <a href="#" class="services_button">Заказать</a>
+                    </div>
                 </li>
             </ul>
             <!-- <div class="services_row">
