work on index and style

--- a/www/index.html
+++ b/www/index.html
@@ -186,20 +186,28 @@
             <h2>Команда</h2>
             <ul class="team_list">
                 <li class="team_item">
-                    <img src="img/team/member1.png" alt="фото первого члена команды" class="team_img">
-                    <p>Sir Lee Wow I</p>
+                    <div class="team_card">
+                        <img src="img/team/member1.png" alt="фото первого члена команды" class="team_img">
+                        <p class="name">Sir Lee Wow I</p>
+                    </div>
                 </li>
                 <li class="team_item">
-                    <img src="img/team/member2.png" alt="фото второго члена команды" class="team_img">
-                    <p>Penelope</p>
+                    <div class="team_card">
+                        <img src="img/team/member2.png" alt="фото второго члена команды" class="team_img">
+                        <p class="name">Penelope</p>
+                    </div>
                 </li>
                 <li class="team_item">
-                    <img src="img/team/member3.png" alt="фото третьего члена команды" class="team_img">
-                    <p>Mr. B.B.</p>
+                    <div class="team_card">
+                        <img src="img/team/member3.png" alt="фото третьего члена команды" class="team_img">
+                        <p class="name">Mr. B.B.</p>
+                    </div>
                 </li>
                 <li class="team_item">
-                    <img src="img/team/member1.png" alt="фото четвертого члена команды" class="team_img">
-                    <p>Sir Lee Wow II</p>
+                    <div class="team_card">
+                        <img src="img/team/member1.png" alt="фото четвертого члена команды" class="team_img">
+                        <p class="name">Sir Lee Wow II</p>
+                    </div>
                 </li>
             </ul>
             <h3 class="team_title">Sir Lee Wow II</h3>
