--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
                             <li class="p2">от 8 лет 2 часа до 6 человек</li>
                         </ul>
                         <p class="services_cost">10 000 ₽</p>
-                        <a href="#" class="services_button">Заказать</a>
+                        <a href="#" class="button">Заказать</a>
                     </div>
                 </li>
                 <li class="services_item">
@@ -59,7 +59,7 @@
                             <li class="p2">3 часа до 6 человек 20 фото 10х15</li>
                         </ul>
                         <p class="services_cost">20 000 ₽</p>
-                        <a href="#" class="services_button">Заказать</a>
+                        <a href="#" class="button">Заказать</a>
                     </div>
                 </li>
                 <li class="services_item">
@@ -71,7 +71,7 @@
                             <li class="p2">от 18 лет с 19-00 и до утра ∞ человек ∞ коктейли DJ</li>
                         </ul>
                         <p class="services_cost">5000 ₽/чел</p>
-                        <a href="#" class="services_button">Заказать</a>
+                        <a href="#" class="button">Заказать</a>
                     </div>
                 </li>
             </ul>
@@ -246,19 +246,19 @@
             <div class="contacts_wrap">
                 <form action="#" method="POST" class="contacts_form">
                     <div class="contacts_form_field">
-                        <label for="name">Name</label>
+                        <label for="name">Имя</label>
                         <input name="name" id="name" type="text">
                     </div>
                     <div class="contacts_form_field">
-                        <label for="email">E-mail</label>
+                        <label for="email">Телефон</label>
                         <input name="email" id="email" type="text">
                     </div>
                     <div class="contacts_form_field contacts_form_field__full">
-                        <label for="message">E-mail</label>
+                        <label for="message">ЧаГо надо?</label>
                         <textarea name="message" id="message"></textarea>
                     </div>
                     <div class="contacts_form_field contacts_form_field__full">
-                        <button class="button">Send message</button>
+                        <button class="contacts_button">Отправить</button>
                     </div>
                     <div class="contacts_info">Lorem ipsum dolor sit amet consectetur.</div>
                 </form>
