--- a/www/index.html
+++ b/www/index.html
@@ -257,10 +257,17 @@
                         <label for="message">ЧаГо надо?</label>
                         <textarea name="message" id="message"></textarea>
                     </div>
+                    <div class="checkbox">
+                        <div class="input_checkbox">
+                            <input type="checkbox" name="checkbox" value="Даю согласие на обработку персональных данных с соответствии с политикой обработки персональных данных">
+                        </div>
+                        <div class="label_checkbox">
+                            <label for="agree">Даю согласие на обработку персональных данных с соответствии с политикой обработки персональных данных</label>
+                        </div>
+                    </div>
                     <div class="contacts_form_field contacts_form_field__full">
                         <button class="contacts_button">Отправить</button>
                     </div>
-                    <div class="contacts_info">Lorem ipsum dolor sit amet consectetur.</div>
                 </form>
 
             </div>
